fixed overlapping checkbox on function page

--- a/src/routes/Onboarding/onboarding.css
+++ b/src/routes/Onboarding/onboarding.css
@@ -288,7 +288,7 @@
     columns: 3 auto;
 }
 .checkbox-col-4 {
-    width: 22%;
+    width: 20%;
 }
 .checkbox-w-close {
     justify-content: initial;
@@ -300,7 +300,7 @@
     margin-left: 0;
 }
 .checkbox-w-wide {
-    width: 60%;
+    width: 1280px;
 }
 
 .checkbox-input-wrapper {
